--- a/drm_trees/2c0e_p_sub7.html
+++ b/drm_trees/2c0e_p_sub7.html
@@ -129,8 +129,8 @@
                 <div class="info">
                     <ul>
                       <li><b>n_pairs</b>: Number of top pairs
-                      <li><b>n_ppairs</b>: Number of top pseudo-pairs
-                      <li><b>n_spairs</b>: Number of side pairs
+                      <li><b>n_fake_pairs</b>: Number of top fake pairs
+                      <li><b>n_side_pairs</b>: Number of side pairs
                       <li><b>corner_orbit_split</b>: Number of bad corners in the HTR orbit with the fewest bad corners
                     </ul>
                 </div>
