--- a/drm_trees/2c6e_p_sub7.html
+++ b/drm_trees/2c6e_p_sub7.html
@@ -140,49 +140,49 @@
              style="left: 10px; top: 124.75px; width: 804.0px; height: 355.0px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_ppairs = 0<br>1.5% of cases (192/12544)<br>p_sub7=8.3%<br>best: L U2 D' R2 U' R (6)<br>worst: R B2 R' F2 U2 D2 R D (8)
+                n_fake_pairs = 0<br>1.5% of cases (192/12544)<br>p_sub7=8.3%<br>best: L U2 D' R2 U' R (6)<br>worst: R B2 R' F2 U2 D2 R D (8)
             </div>
         <div id="node_7" class="tree-node leaf-node" 
              style="left: 10px; top: 115.0px; width: 232.0px; height: 105.0px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_spairs = 0<br>0.7% of cases (88/12544)<br>p_sub7=6.8%<br>best: L U L2 U2 D R' (6)<br>worst: R U R2 L2 B2 U' L' B2 (8)
+                n_side_pairs = 0<br>0.7% of cases (88/12544)<br>p_sub7=6.8%<br>best: L U L2 U2 D R' (6)<br>worst: R U R2 L2 B2 U' L' B2 (8)
             </div></div>
         <div id="node_8" class="tree-node non-leaf-node" 
              style="left: 252.0px; top: 115.0px; width: 512.0px; height: 230.0px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_spairs >= 1<br>0.8% of cases (104/12544)<br>p_sub7=9.6%<br>best: L U2 D' R2 U' R (6)<br>worst: R B2 R' F2 U2 D2 R D (8)
+                n_side_pairs >= 1<br>0.8% of cases (104/12544)<br>p_sub7=9.6%<br>best: L U2 D' R2 U' R (6)<br>worst: R B2 R' F2 U2 D2 R D (8)
             </div>
         <div id="node_9" class="tree-node leaf-node" 
              style="left: 10px; top: 115.0px; width: 226.0px; height: 105.0px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_spairs <= 1<br>0.7% of cases (88/12544)<br>p_sub7=9.1%<br>best: L U2 D' R2 U' R (6)<br>worst: R B2 R' F2 U2 D2 R D (8)
+                n_side_pairs <= 1<br>0.7% of cases (88/12544)<br>p_sub7=9.1%<br>best: L U2 D' R2 U' R (6)<br>worst: R B2 R' F2 U2 D2 R D (8)
             </div></div>
         <div id="node_10" class="tree-node leaf-node" 
              style="left: 246.0px; top: 115.0px; width: 226.0px; height: 105.0px; 
                     background-color: #ddffdd;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_spairs >= 2<br>0.1% of cases (16/12544)<br>p_sub7=12.5%<br>best: L U2 D' R2 U' R' (6)<br>worst: R U D2 B2 L' U' L U2 (8)
+                n_side_pairs >= 2<br>0.1% of cases (16/12544)<br>p_sub7=12.5%<br>best: L U2 D' R2 U' R' (6)<br>worst: R U D2 B2 L' U' L U2 (8)
             </div></div></div></div>
         <div id="node_11" class="tree-node non-leaf-node" 
              style="left: 824.0px; top: 124.75px; width: 488.0px; height: 230.0px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_ppairs >= 1<br>0.8% of cases (96/12544)<br>p_sub7=0.0%<br>best: R U R2 U2 D L' B2 (7)<br>worst: R U D2 L2 D L U B2 (8)
+                n_fake_pairs >= 1<br>0.8% of cases (96/12544)<br>p_sub7=0.0%<br>best: R U R2 U2 D L' B2 (7)<br>worst: R U D2 L2 D L U B2 (8)
             </div>
         <div id="node_12" class="tree-node leaf-node" 
              style="left: 10px; top: 115.0px; width: 214.0px; height: 105.0px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_spairs = 0<br>0.4% of cases (44/12544)<br>p_sub7=0.0%<br>best: R U2 D' L2 U' L' F2 (7)<br>worst: R U R F2 R' U D2 L (8)
+                n_side_pairs = 0<br>0.4% of cases (44/12544)<br>p_sub7=0.0%<br>best: R U2 D' L2 U' L' F2 (7)<br>worst: R U R F2 R' U D2 L (8)
             </div></div>
         <div id="node_13" class="tree-node leaf-node" 
              style="left: 234.0px; top: 115.0px; width: 214.0px; height: 105.0px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_spairs >= 1<br>0.4% of cases (52/12544)<br>p_sub7=0.0%<br>best: R U R2 U2 D L' B2 (7)<br>worst: R U D2 L2 D L U B2 (8)
+                n_side_pairs >= 1<br>0.4% of cases (52/12544)<br>p_sub7=0.0%<br>best: R U R2 U2 D L' B2 (7)<br>worst: R U D2 L2 D L U B2 (8)
             </div></div></div></div>
         <div id="node_14" class="tree-node non-leaf-node" 
              style="left: 1372.0px; top: 134.5px; width: 536.0px; height: 239.75px; 
@@ -194,13 +194,13 @@
              style="left: 10px; top: 124.75px; width: 244.0px; height: 105.0px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_spairs = 0<br>1.1% of cases (132/12544)<br>p_sub7=0.0%<br>best: R F2 U D R U R (7)<br>worst: R U F2 R2 L2 U' L F2 U2 (9)
+                n_side_pairs = 0<br>1.1% of cases (132/12544)<br>p_sub7=0.0%<br>best: R F2 U D R U R (7)<br>worst: R U F2 R2 L2 U' L F2 U2 (9)
             </div></div>
         <div id="node_16" class="tree-node leaf-node" 
              style="left: 264.0px; top: 124.75px; width: 232.0px; height: 105.0px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 10px; color: black; height: 105.0px;">
-                n_spairs >= 1<br>1.2% of cases (156/12544)<br>p_sub7=0.0%<br>best: R F2 L D L U' L' (7)<br>worst: R U D2 L2 D L U D' B2 (9)
+                n_side_pairs >= 1<br>1.2% of cases (156/12544)<br>p_sub7=0.0%<br>best: R F2 L D L U' L' (7)<br>worst: R U D2 L2 D L U D' B2 (9)
             </div></div></div></div>
         <div id="node_17" class="tree-node non-leaf-node" 
              style="left: 1968.0px; top: 144.25px; width: 609.2px; height: 259.25px; 
@@ -212,21 +212,21 @@
              style="left: 10px; top: 134.5px; width: 281.5px; height: 114.75px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 11.5px; color: black; height: 114.75px;">
-                n_ppairs = 0<br>5.9% of cases (736/12544)<br>p_sub7=0.0%<br>best: R U D2 L2 D L' D' (7)<br>worst: R U2 D' L2 U' L' D2 R2 U (9)
+                n_fake_pairs = 0<br>5.9% of cases (736/12544)<br>p_sub7=0.0%<br>best: R U D2 L2 D L' D' (7)<br>worst: R U2 D' L2 U' L' D2 R2 U (9)
             </div></div>
         <div id="node_19" class="tree-node leaf-node" 
              style="left: 301.5px; top: 134.5px; width: 267.7px; height: 114.75px; 
                     background-color: #ffffff;">
             <div class="node-content" style="font-size: 11.5px; color: black; height: 114.75px;">
-                n_ppairs >= 1<br>4.1% of cases (512/12544)<br>p_sub7=0.0%<br>best: R F2 D L2 U B2 R (7)<br>worst: R U D' R' D2 R B2 D R' (9)
+                n_fake_pairs >= 1<br>4.1% of cases (512/12544)<br>p_sub7=0.0%<br>best: R F2 D L2 U B2 R (7)<br>worst: R U D' R' D2 R B2 D R' (9)
             </div></div></div></div></div>
                 </div>
                 
                 <div class="info">
                     <ul>
                       <li><b>n_pairs</b>: Number of top pairs
-                      <li><b>n_ppairs</b>: Number of top pseudo-pairs
-                      <li><b>n_spairs</b>: Number of side pairs
+                      <li><b>n_fake_pairs</b>: Number of top fake pairs
+                      <li><b>n_side_pairs</b>: Number of side pairs
                       <li><b>corner_orbit_split</b>: Number of bad corners in the HTR orbit with the fewest bad corners
                     </ul>
                 </div>
